[package]
name = "mdbook-page-styles"
version = "0.1.0"
authors = ["Shem Sedrick <ssedrick1@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
mdbook = "0.4"
toml = "0.5"
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.8"
pulldown-cmark = { version = "0.8", default-features = false }
pulldown-cmark-to-cmark = "6.0.0"
